--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,9 @@
 unique_ids:
   forms:
     Form1: 6FCZ63NMQ52J6CYCEFZLXHK6DY566GNZ
-  modules: {}
+  modules:
+    TestModule: '1691669038215688238755555.2145'
   server_modules: {}
   assets:
-    theme.css: 5IX6MSZGYPVX2XKOK7PHGMDQVWHXTIXS
     standard-page.html: PJW2R6QVHX4BFBBS3B6UZHLPHVKHMH4S
+    theme.css: 5IX6MSZGYPVX2XKOK7PHGMDQVWHXTIXS
