--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,8 +1,18 @@
-allow_embedding: false
-package_name: M3_App_1
-name: M3 App 1
-startup_form: Form1
-renamed: true
-runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
 dependencies: []
-services: []
+services:
+- source: /runtime/services/tables.yml
+  client_config: {}
+  server_config: {}
+package_name: M3_App_1
+allow_embedding: false
+name: M3 App 1
+runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
+startup_form: Form1
+native_deps: {head_html: "<script src=\"https://unpkg.com/@web3auth/modal@6.1.7/dist/modal.cjs.js\"\
+    ></script>    \n<!--\n  JSPM Generator Import Map\n  Edit URL: https://generator.jspm.io/#Y2VgZGBkDM0rySzJSU1hcChPTTJOLC3J0M/NT0nMcTDTM9QzBwB7L+CHJAA\n\
+    -->\n <script type=\"importmap\">\n{\n  \"imports\": {\n    \"@web3auth/modal\"\
+    : \"https://unpkg.com/@web3auth/modal@6.1.7/dist/modal.cjs.js\"\n  }\n}\n</script>\n\
+    \n<!-- ES Module Shims: Import maps polyfill for olrder browsers without import\
+    \ maps support (eg Safari 16.3) -->\n<script async src=\"https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js\"\
+    \ crossorigin=\"anonymous\"></script>"}
+renamed: true
