--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,9 +3,9 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
-package_name: M3_App_1
+package_name: web3auth
 allow_embedding: false
-name: M3 App 1
+name: web3auth
 runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
 startup_form: Form1
 native_deps: {head_html: "<script src=\"https://unpkg.com/@web3auth/modal@6.1.7\"\
