--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,8 +1,6 @@
 unique_ids:
-  forms:
-    Form1: 6FCZ63NMQ52J6CYCEFZLXHK6DY566GNZ
-  modules: {}
+  forms: {}
+  modules:
+    startup: '1691834850073945278966623.156'
   server_modules: {}
-  assets:
-    standard-page.html: PJW2R6QVHX4BFBBS3B6UZHLPHVKHMH4S
-    theme.css: 5IX6MSZGYPVX2XKOK7PHGMDQVWHXTIXS
+  assets: {}
