Make app work as a dependency

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,6 +1,9 @@
 unique_ids:
   forms: {}
   modules:
+    login: '16920202870376659470722.709227'
     startup: '1691834850073945278966623.156'
+    utils: '1692020192738367866115879.25287'
+    utils._component_helpers: '1692020202730451217954420.9549'
   server_modules: {}
   assets: {}
